--- a/PL/Views/PokemonHTTPClient/GetAll.cshtml
+++ b/PL/Views/PokemonHTTPClient/GetAll.cshtml
@@ -4,12 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>GetAll</h1>
-
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h3> POKÉAPI</h3>
+            <h3> POKÉAPI  POKEDEX </h3>
         </div>
         <hr />
 
